<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">COCOzone</string>
    <string name="textview">TextView</string>
    <string name="textviews">textviews</string>
    <string name="enter_your_post_topic">Enter Your post topic</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="topic">Topic</string>
    <string name="discription">Discription</string>
    <string name="quentity">Quentity</string>

</resources>